# rosduct

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  tracks.yaml
config/: my.yaml
debian/: changelog  control  gbp.conf  rules
launch/: local_part.launch
src/rosduct/: conversions.py  rosbridge_client.py  rosduct_impl.py
srv/: ROSDuctConnection.srv
